--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oasis Proxy Popup</title>
+    <link rel="icon" href="/src/assets/icons/logo-icon.png">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
