--- a/src/monitor/index.html
+++ b/src/monitor/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oasis Proxy Popup</title>
+    <title>Request Monitor - Oasis Proxy</title>
     <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png">
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
