--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oasis Proxy Settings</title>
-    <link rel="icon" href="/src/assets/icons/logo-icon.png">
+    <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
@@ -12,7 +12,10 @@
       rel="stylesheet"
     />
     <!-- Material Symbols kept for compatibility if needed, but we prefer Bootstrap Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <div id="app"></div>
