--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oasis Proxy Popup</title>
     <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png">
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png">
   </head>
   <body>
     <div id="app"></div>
