refactor: extract common modal and detail view UI into reusable base components.

--- a/tools/brand.html
+++ b/tools/brand.html
@@ -437,7 +437,7 @@
             const fontWeight = '800';
             
             const refFontSize = 100;
-            const refIconSize = 120; 
+            const refIconSize = 360; // Logo size scaled 3x (was 120) 
             const refGap = 40; 
             
             await document.fonts.load(`${fontWeight} ${refFontSize}px "${fontFamily}"`);
