--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oasis Proxy Downloads</title>
+    <title>Downloads - Oasis Proxy 2</title>
     <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png">
     <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png">
   </head>
