feat: Refactor AppSidebar, introduce new composables, components for monitor, policy, popup, and update background scripts and views.

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Options - Oasis Proxy 2</title>
-    <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png" />
-    <link rel="icon" href="/src/assets/icons/light/ripple-icon-64x64.png" />
+    <link rel="icon" href="../assets/icons/light/ripple-icon-light-64x64-blurred.png" />
   </head>
   <body>
     <div id="app"></div>
